--- a/src/test.html
+++ b/src/test.html
@@ -7,9 +7,13 @@
 
   <body>
     <a-scene inspector="url: https://aframe.io/releases/0.4.0/aframe-inspector.min.js">
-      <a-entity camera look-controls wasd-controls></a-entity>
+      <a-entity camera look-controls wasd-controls
+            position="0 0 -1"
+            geometry="primitive: ring"
+            material="color: red; shader: flat"
+            cursor="maxDistance: 5; fuse: false"></a-entity>
       <a-sky color="grey"></a-sky>
-      <a-entity scale="0.2 0.2 0.2" position="0 -2 -5" obj-model="obj: url(/data/pillar.obj); mtl: url(/data/pillar.mtl)"></a-entity>
+      <a-entity scale="0.2 0.2 0.2" position="0 -2 -10" obj-model="obj: url(/data/pillar.obj); mtl: url(/data/pillar.mtl)"></a-entity>
     </a-scene>
   </body>
 </html>
