--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>A-Frame React Boilerplate</title>
-    <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
+    <script src="aframe-v0.4.0.min.js"></script>
   </head>
 
   <body>
